허브 페이지 테스트

--- a/index.html
+++ b/index.html
@@ -26,16 +26,14 @@
     <script src="./js/slick.extensions.min.js"></script>
     <script src="./js/common.js"></script>
     <script src="./js/main.js"></script>
-    <title>이마트24 - scss사용하기</title>
+    <title>포폴링크</title>
 
 </head>
 
 <body id="main" class="main">
-    <h1>이마트24</h1>
-    <div class="accessibility">
-        <a href="#container">본문 바로가기</a>
-    </div>
-    <div id="wrapper">
+    <h1>포폴링크 test</h1>
+    <a href="./site/emart24/main.html">이마트24</a>
+    <!-- <div id="wrapper"> -->
         <header id="header">
             <div class="header_top">
                 <div class="wrap">
